Added script to tips

--- a/tips.css
+++ b/tips.css
@@ -9,3 +9,8 @@ a:active {
 a:visited {
   color: red;
 }
+
+<!--When you use these states to style your links, 
+there is a specific order you need to write your CSS in:
+link, visited, hover, focus, then active.-->
+
