Added styles.css page

--- a/tips.css
+++ b/tips.css
@@ -10,7 +10,7 @@ a:visited {
   color: red;
 }
 
-<!--When you use these states to style your links, 
-there is a specific order you need to write your CSS in:
-link, visited, hover, focus, then active.-->
 
+//When you use these states to style your links, 
+there is a specific order you need to write your CSS in
+link, visited, hover, focus, then active
