--- a/tips.css
+++ b/tips.css
@@ -11,6 +11,8 @@ a:visited {
 }
 
 
-//When you use these states to style your links, 
+/*When you use these states to style your links, 
 there is a specific order you need to write your CSS in
-link, visited, hover, focus, then active 
+link, visited, hover, focus, then active*/ 
+
+
